--- a/HieuPhamBeauty/HieuPhamBeauty/Views/Home/About.cshtml
+++ b/HieuPhamBeauty/HieuPhamBeauty/Views/Home/About.cshtml
@@ -2,21 +2,111 @@
     ViewBag.Title = "About";
 }
 
-
-<div id="siteAbout" style="margin-top: 12em">
+<section class="about-us">
     <div class="container">
-        <div>
-            <label class="booking_service">Về chúng tôi</label>
-            <div class="logo_service">
-                <p class="dash_b_left"></p>
-                <img src="../../Content/img/logo-1.png" />
-                <p class="dash_b_right"></p>
+        <div class="title_about">
+            <div class="section-header">
+                <h2>VỀ CHÚNG TÔI</h2>
+                <div class="line-container">
+                    <div class="line"></div>
+                    <img src="../../Content/img/logo-1.png" />
+                    <div class="line"></div>
+                </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="bg-user">
+                    <div class="yellow-background"></div>
+                    <img src="../../Content/img/people.jpg" />
+                </div>
+            </div>
+            <div class="col-lg-8">
+                <div class="content_about_us">
+                    <p>
+                        Chào bạn, mình là Phạm Ngọc Hiếu, chuyên gia trong ngành làm đẹp và giáo dục.
+                        Mình đam mê chăm sóc da, trang điểm, và chăm sóc tóc,
+                        đồng thời cũng tích cực đào tạo và chia sẻ kiến thức trong ngành này.
+                        Mục tiêu của mình là giúp cả người mới và chuyên gia nâng cao kỹ năng và cập nhật xu hướng mới.
+                        Nếu bạn cần tư vấn về làm đẹp hoặc đào tạo, hãy liên hệ với mình nhé!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
-        <div>
-            <div class="" style="height: 300px; width: 300px; background-color: #EFB33F"></div>
-            <div class="" style="height: 300px; width: 300px; background-color: red"></div>
+<section class="doctor-advice">
+    <div class="container">
+        <div class="title_about">
+            <div class="section-header">
+                <h2>Bác sĩ tư vấn</h2>
+                <div class="line-container">
+                    <div class="line"></div>
+                    <img src="../../Content/img/logo-1.png" />
+                    <div class="line"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="bg-user">
+                    <div class="yellow-background"></div>
+                    <img src="../../Content/img/people.jpg" />
+                </div>
+            </div>
+            <div class="col-lg-8">
+                <div class="content_about_us">
+                    <p>
+                        Chào bạn, mình là Phạm Ngọc Hiếu, chuyên gia trong ngành làm đẹp và giáo dục.
+                        Mình đam mê chăm sóc da, trang điểm, và chăm sóc tóc,
+                        đồng thời cũng tích cực đào tạo và chia sẻ kiến thức trong ngành này.
+                        Mục tiêu của mình là giúp cả người mới và chuyên gia nâng cao kỹ năng và cập nhật xu hướng mới.
+                        Nếu bạn cần tư vấn về làm đẹp hoặc đào tạo, hãy liên hệ với mình nhé!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<div class="service">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 pppp banner_service">
+                <img src="../../Content/img/banner-1.jpg" />
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <form class="main_form form_service">
+                    <div class="row">
+                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                            <label class="booking_service">Đặt lịch</label>
+                            <div class="logo_service">
+                                <p class="dash_b_left"></p>
+                                <img src="../../Content/img/logo-1.png" />
+                                <p class="dash_b_right"></p>
+                            </div>
+                        </div>
+                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                            <input class="form-control" placeholder="Họ tên" type="text" name="Name">
+                        </div>
+                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                            <input class="form-control" placeholder="Điện thoại" type="text" name="Phone">
+                        </div>
+                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                            <select name="" id="service" class="form-control">
+                                <option value="">Dịch vụ cần làm</option>
+                                <option value="1">Test 1</option>
+                                <option value="2">Test 2</option>
+                                <option value="3">Test 3</option>
+                            </select>
+                        </div>
+                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                            <button class="send">Đăng ký</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
