--- a/HieuPhamBeauty/HieuPhamBeauty/Views/Home/Index.cshtml
+++ b/HieuPhamBeauty/HieuPhamBeauty/Views/Home/Index.cshtml
@@ -83,76 +83,7 @@
 <!-- end six_box-->
 
 <div class="bg-1">
-    <div class="container list-box-container">
-        <div class="box">
-            <div class="image-container">
-                <img src="../../Content/img/sample.jpg" />
-            </div>
-            <div class="title">
-                <h4 class="name_service">Nâng cơ xóa nhăn mắt</h4>
-            </div>
-        </div>
-        <div class="box">
-            <div class="image-container">
-                <img src="../../Content/img/sample.jpg" />
-            </div>
-            <div class="title">
-                <h4 class="name_service">Nâng cơ xóa nhăn mắt</h4>
-            </div>
-        </div>
-        <div class="box">
-            <div class="image-container">
-                <img src="../../Content/img/sample.jpg" />
-            </div>
-            <div class="title">
-                <h4 class="name_service">Nâng cơ xóa nhăn mắt</h4>
-            </div>
-        </div>
-        <div class="box">
-            <div class="image-container">
-                <img src="../../Content/img/sample.jpg" />
-            </div>
-            <div class="title">
-                <h4 class="name_service">Nâng cơ xóa nhăn mắt</h4>
-            </div>
-        </div>
-
-    </div>
-    <div class="container list-box-container">
-        <div class="box">
-            <div class="image-container">
-                <img src="../../Content/img/sample.jpg" />
-            </div>
-            <div class="title">
-                <h4 class="name_service">Nâng cơ xóa nhăn mắt</h4>
-            </div>
-        </div>
-        <div class="box">
-            <div class="image-container">
-                <img src="../../Content/img/sample.jpg" />
-            </div>
-            <div class="title">
-                <h4 class="name_service">Nâng cơ xóa nhăn mắt</h4>
-            </div>
-        </div>
-        <div class="box">
-            <div class="image-container">
-                <img src="../../Content/img/sample.jpg" />
-            </div>
-            <div class="title">
-                <h4 class="name_service">Nâng cơ xóa nhăn mắt</h4>
-            </div>
-        </div>
-        <div class="box">
-            <div class="image-container">
-                <img src="../../Content/img/sample.jpg" />
-            </div>
-            <div class="title">
-                <h4 class="name_service">Nâng cơ xóa nhăn mắt</h4>
-            </div>
-        </div>
-
-    </div>
+    <div class="container list-box-container" id="listbox"></div>   
 </div>
 
 <div class="promotion">
