--- a/HieuPhamBeauty/HieuPhamBeauty/Views/Shared/_HeaderPartial.cshtml
+++ b/HieuPhamBeauty/HieuPhamBeauty/Views/Shared/_HeaderPartial.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link" href="/Home/About">Giới thiệu </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#yoga"> Đặt lịch</a>
+                            <a class="nav-link" href="/Home/Book"> Đặt lịch</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#pricing">Khóa học</a>
